[gd_scene format=3 uid="uid://i7bfioablum8"]

[ext_resource type="Script" uid="uid://8k8iuvvhixmp" path="res://levels/pause_menu/pause_menu.gd" id="1_05uyy"]
[ext_resource type="Texture2D" uid="uid://cpb53apopdg5n" path="res://levels/pause_menu/icon_play.png" id="1_nwcfo"]
[ext_resource type="Texture2D" uid="uid://flme2od6bunq" path="res://levels/pause_menu/icon_restart.png" id="2_05uyy"]
[ext_resource type="AudioStream" uid="uid://cwf8pmnr8xbj1" path="res://audio/782151__oceansonmars__bubbleupfastdelfx_01-soft.wav" id="4_avurv"]
[ext_resource type="Texture2D" uid="uid://cl3frtffsc4bd" path="res://levels/pause_menu/icon_cross.png" id="4_kudsv"]

[sub_resource type="Animation" id="Animation_p81d2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(3.609068, 3.609068, 3.609068, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.011764706, 0.011764706, 0.011764706, 0.22352941)]
}

[sub_resource type="Animation" id="Animation_2nc7s"]
resource_name = "blur"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.011764706, 0.011764706, 0.011764706, 0.22352941)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.76666665),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d3xb4"]
_data = {
&"RESET": SubResource("Animation_p81d2"),
&"blur": SubResource("Animation_2nc7s")
}

[node name="PauseMenu" type="CanvasLayer" unique_id=1645352922]
process_mode = 3
script = ExtResource("1_05uyy")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1619161699]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.448
anchor_right = 0.5
anchor_bottom = 0.448
offset_left = -960.0
offset_top = -483.84003
offset_right = 960.0
offset_bottom = 596.16
grow_horizontal = 0
grow_vertical = 0
color = Color(0.011764706, 0.011764706, 0.011764706, 0.22352941)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=228582075]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" unique_id=1429324638]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer" unique_id=1895306756]
layout_mode = 2
icon = ExtResource("1_nwcfo")

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer" unique_id=104681163]
layout_mode = 2
icon = ExtResource("2_05uyy")

[node name="Leave" type="Button" parent="PanelContainer/VBoxContainer" unique_id=2052935162]
layout_mode = 2
icon = ExtResource("4_kudsv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1110882127]
libraries/ = SubResource("AnimationLibrary_d3xb4")

[node name="PauseActivated" type="AudioStreamPlayer" parent="." unique_id=704369466]
stream = ExtResource("4_avurv")

[node name="PauseDisabled" type="AudioStreamPlayer" parent="." unique_id=1549937903]
stream = ExtResource("4_avurv")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Leave" to="." method="_on_leave_pressed"]
